services/kafka/kafka.yaml
# services/kafka/kafka.yaml

apiVersion: apps.v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: helix-core
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
